# superlists

./: functional_tests.py  pyproject.toml
lists/: tests.py
superlists/: settings.py  urls.py
